--- a/app/src/main/res/layout-sw720dp/fragment_sun.xml
+++ b/app/src/main/res/layout-sw720dp/fragment_sun.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:text="Longitude"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
         <TextView
             android:id="@+id/longitude"
@@ -30,7 +30,8 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"
+            android:textSize="@dimen/fontSize"
+
             />
 
     </LinearLayout>
@@ -51,7 +52,7 @@
             android:layout_height="wrap_content"
             android:text="Latitude"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
         <TextView
             android:id="@+id/latitude"
@@ -59,7 +60,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"
+            android:textSize="@dimen/fontSize"
             />
 
     </LinearLayout>
@@ -78,7 +79,7 @@
             android:layout_height="wrap_content"
             android:text="Azimuth Rise"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
         <TextView
             android:id="@+id/azimuthRise"
@@ -86,7 +87,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"
+            android:textSize="@dimen/fontSize"
             />
 
     </LinearLayout>
@@ -103,7 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Sunrise"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
         <TextView
             android:id="@+id/sunrise"
@@ -111,7 +112,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
 
     </LinearLayout>
@@ -128,7 +129,7 @@
             android:layout_height="wrap_content"
             android:text="Azimuth Set"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
         <TextView
             android:id="@+id/azimuthSet"
@@ -136,7 +137,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
     </LinearLayout>
 
@@ -154,7 +155,7 @@
             android:layout_height="wrap_content"
             android:text="Sunset"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
         <TextView
             android:id="@+id/sunset"
@@ -162,7 +163,8 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand" />
+            android:textSize="@dimen/fontSize"
+            />
 
     </LinearLayout>
 
@@ -179,7 +181,7 @@
             android:layout_height="wrap_content"
             android:text="Twilight Morning"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
         <TextView
             android:id="@+id/twilightMorning"
@@ -187,7 +189,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="end"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
 
     </LinearLayout>
@@ -203,14 +205,14 @@
             android:layout_height="wrap_content"
             android:text="Twilight Evening"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
         <TextView
             android:id="@+id/twilightEvening"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
     </LinearLayout>
 
