--- a/app/src/main/res/layout-sw720dp-land/activity_settings.xml
+++ b/app/src/main/res/layout-sw720dp-land/activity_settings.xml
@@ -32,8 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="end"
-                />
+                android:gravity="end" />
 
 
         </LinearLayout>
@@ -77,6 +76,7 @@
                 android:layout_height="wrap_content"
                 android:text="Latitude"
                 android:textSize="@dimen/fontSettingsLand"
+
                 />
 
             <EditText
@@ -87,6 +87,93 @@
                 android:padding="5sp"
                 android:layout_weight="1"
                 android:textSize="@dimen/fontSettingsLand"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+                android:layout_weight="1"
+                android:padding="3dip"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Localization"
+                android:textSize="@dimen/fontSettingsLand"
+
+                />
+
+            <EditText
+                android:id="@+id/newLocation"
+                android:gravity="end"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5sp"
+                android:layout_weight="1"
+                android:textSize="@dimen/fontSettingsLand"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="add"
+                android:textSize="@dimen/fontSettingsLand"
+                android:onClick="addLocation"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="3dip"
+                android:text="Select city"
+                android:textSize="@dimen/fontSettingsLand"/>
+
+            <Spinner
+                android:id="@+id/citySpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end" />
+
+
+
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="3dip"
+                android:text="Select Unit"
+                android:textSize="@dimen/fontSettingsLand"/>
+
+            <Spinner
+                android:id="@+id/unitSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end" />
+
+
 
 
         </LinearLayout>
