--- a/app/src/main/res/layout-sw720dp/fragment_moon.xml
+++ b/app/src/main/res/layout-sw720dp/fragment_moon.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:text="Longitude"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
         <TextView
             android:id="@+id/longitude"
@@ -28,7 +28,8 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"
+            android:textSize="@dimen/fontSize"
+
             />
 
     </LinearLayout>
@@ -49,7 +50,7 @@
             android:layout_height="wrap_content"
             android:text="Latitude"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
         <TextView
             android:id="@+id/latitude"
@@ -57,7 +58,8 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"
+            android:textSize="@dimen/fontSize"
+
             />
 
     </LinearLayout>
@@ -73,14 +75,14 @@
             android:layout_height="wrap_content"
             android:text="Moon Rise"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
         <TextView
             android:id="@+id/moonRise"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"
+            android:textSize="@dimen/fontSize"
             />
 
     </LinearLayout>
@@ -97,7 +99,7 @@
             android:layout_height="wrap_content"
             android:text="Moon Set"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
         <TextView
             android:id="@+id/moonSet"
@@ -105,7 +107,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"
+            android:textSize="@dimen/fontSize"
             />
 
     </LinearLayout>
@@ -121,7 +123,7 @@
         android:layout_height="wrap_content"
         android:text="New Moon"
         android:layout_weight="1"
-        android:textSize="@dimen/fontLand"/>
+        android:textSize="@dimen/fontSize"/>
 
 
     <TextView
@@ -130,7 +132,7 @@
         android:layout_height="wrap_content"
         android:gravity="end"
         android:layout_weight="1"
-        android:textSize="@dimen/fontLand"
+        android:textSize="@dimen/fontSize"
         />
 
 </LinearLayout>
@@ -147,7 +149,7 @@
             android:layout_height="wrap_content"
             android:text="Full Moon"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
 
         <TextView
@@ -156,7 +158,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"
+            android:textSize="@dimen/fontSize"
             />
 
     </LinearLayout>
@@ -174,7 +176,7 @@
             android:layout_height="wrap_content"
             android:text="Illumination"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
         <TextView
             android:id="@+id/illumination"
@@ -182,7 +184,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"
+            android:textSize="@dimen/fontSize"
             />
 
     </LinearLayout>
@@ -199,7 +201,7 @@
             android:layout_height="wrap_content"
             android:text="Age"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"/>
+            android:textSize="@dimen/fontSize"/>
 
         <TextView
             android:id="@+id/age"
@@ -207,7 +209,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_weight="1"
-            android:textSize="@dimen/fontLand"
+            android:textSize="@dimen/fontSize"
             />
 
     </LinearLayout>
