layout for tablet working

--- a/app/src/main/res/layout-sw720dp-land/forecast_fragment.xml
+++ b/app/src/main/res/layout-sw720dp-land/forecast_fragment.xml
@@ -37,7 +37,7 @@
         android:layout_centerHorizontal="true"
         android:text="@string/condition"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="@dimen/fontLand"/>
+        android:textSize="@dimen/fontLand" />
 
 
     <TextView
@@ -146,6 +146,7 @@
                 android:text="lTemp2"
                 android:layout_weight="1"
                 android:textAlignment="center"
+                android:textSize="@dimen/fontLand"
                 />
 
 
