--- a/app/src/main/res/layout-sw720dp/activity_settings.xml
+++ b/app/src/main/res/layout-sw720dp/activity_settings.xml
@@ -25,7 +25,7 @@
                 android:layout_weight="1"
                 android:padding="3dip"
                 android:text="Refresh Time"
-                android:textSize="@dimen/fontSettings"/>
+                android:textSize="@dimen/fontSettingsLand"/>
 
             <Spinner
                 android:id="@+id/refresh"
@@ -49,7 +49,7 @@
                 android:padding="3dip"
                 android:text="Longitude"
                 android:layout_weight="1"
-                android:textSize="@dimen/fontSettings"/>
+                android:textSize="@dimen/fontSettingsLand"/>
             <EditText
                 android:id="@+id/newLogitude"
                 android:gravity="end"
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:padding="5sp"
                 android:layout_weight="1"
-                android:textSize="@dimen/fontSettings"/>
+                android:textSize="@dimen/fontSettingsLand"/>
 
 
         </LinearLayout>
@@ -75,7 +75,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Latitude"
-                android:textSize="@dimen/fontSettings"
+                android:textSize="@dimen/fontSettingsLand"
 
                 />
 
@@ -86,7 +86,7 @@
                 android:layout_height="wrap_content"
                 android:padding="5sp"
                 android:layout_weight="1"
-                android:textSize="@dimen/fontSettings"/>
+                android:textSize="@dimen/fontSettingsLand"/>
         </LinearLayout>
 
         <LinearLayout
@@ -101,7 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Localization"
-                android:textSize="@dimen/fontSettings"
+                android:textSize="@dimen/fontSettingsLand"
 
                 />
 
@@ -112,7 +112,7 @@
                 android:layout_height="wrap_content"
                 android:padding="5sp"
                 android:layout_weight="1"
-                android:textSize="@dimen/fontSettings"/>
+                android:textSize="@dimen/fontSettingsLand"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -135,7 +135,7 @@
                 android:layout_weight="1"
                 android:padding="3dip"
                 android:text="Select city"
-                android:textSize="@dimen/fontSettings"/>
+                android:textSize="@dimen/fontSettingsLand"/>
 
             <Spinner
                 android:id="@+id/citySpinner"
@@ -163,7 +163,7 @@
                 android:layout_weight="1"
                 android:padding="3dip"
                 android:text="Select Unit"
-                android:textSize="@dimen/fontSettings"/>
+                android:textSize="@dimen/fontSettingsLand"/>
 
             <Spinner
                 android:id="@+id/unitSpinner"
@@ -187,7 +187,7 @@
             android:layout_gravity="center_horizontal"
             android:onClick="saveSettings"
             android:text="Save"
-            android:textSize="@dimen/fontSettings"/>
+            android:textSize="@dimen/fontSettingsLand"/>
 
 
     </LinearLayout>
